--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   go_router: ^14.8.0
   dynamic_path_url_strategy: ^1.0.0
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/images/logo/
+    - asset/images/sign_in_screen/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
