Design Sign up Page

--- a/dine_hive/android/build.gradle
+++ b/dine_hive/android/build.gradle
@@ -1,7 +1,10 @@
-allprojects {
+buildscript {
     repositories {
-        google()
-        mavenCentral()
+        google() // ✅ Required for Android Gradle Plugin
+        mavenCentral() // ✅ Required for dependencies
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0' // ✅ Ensure this is correct
     }
 }
 
