--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^14.8.0
   dynamic_path_url_strategy: ^1.0.0
   gap: ^3.0.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,8 @@ flutter:
     - asset/images/logo/
     - asset/images/sign_in_screen/
     - asset/images/forget_pass/
+    - asset/images/home_screen/
+    - asset/icon/home_screen/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
