--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
     - asset/images/sign_in_screen/
     - asset/images/forget_pass/
     - asset/images/restaurant_info_screen/
+    - asset/images/home_screen/
+    - asset/icon/home_screen/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
