--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.2
   confetti: ^0.8.0
   fluttertoast: ^8.2.12
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
