Add #29: cart screen design & functionality

--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - asset/icon/home_screen/
     - asset/icon/payment_gateway_screen/
     - asset/images/payment_successful_screen/
+    - asset/images/cart_screen/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
