--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   confetti: ^0.8.0
   fluttertoast: ^8.2.12
   intl: ^0.20.2
+  http: ^1.3.0
+  flutter_stripe: ^11.4.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
