--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.3.0
   flutter_stripe: ^11.4.0
   dio: ^5.8.0+1
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
