--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_stripe: ^11.4.0
   dio: ^5.8.0+1
   firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_test:
