--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
