--- a/dine_hive/pubspec.yaml
+++ b/dine_hive/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.6
   shared_preferences: ^2.5.3
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
