--- a/dine_hive/android/gradle.properties
+++ b/dine_hive/android/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8.fullMode=false
 kotlin.incremental=false
+dev.steenbakker.mobile_scanner.useUnbundled=true
